# SFTQwen

./: .gitignore  Makefile  main.py  pyproject.toml
notebooks/: Dascim.ipynb  SFTQwen.ipynb
